renovate: extend configuration, set up versioning, add test job and update build job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,33 @@
+---
 variables:
   DOCKER_HUB_IMAGE: "${DOCKER_HUB_USERNAME}/${CI_PROJECT_NAME}"
-  VERSION: "${CI_COMMIT_TAG}"
+  # renovate: datasource=docker depName=alpine
+  ALPINE_VERSION: "3.19.1"
+  # renovate: datasource=repology depName=alpine_3_19/wireguard-tools versioning=loose
+  WIREGUARD_VERSION: "1.0.20210914-r3"
 
 stages:
+- test
 - build
+
+kaniko-check:
+  image:
+    name: gcr.io/kaniko-project/executor:v1.23.2-debug
+    entrypoint: [""]
+  rules:
+  - if: $CI_COMMIT_REF_NAME != $CI_DEFAULT_BRANCH
+  script:
+  - /kaniko/executor --build-arg="WIREGUARD_VERSION=${WIREGUARD_VERSION}" --context="${CI_PROJECT_DIR}" --dockerfile="${CI_PROJECT_DIR}/Dockerfile" --no-push
+  stage: test
+  tags:
+  - kubernetes
 
 kaniko:
   image:
-    name: gcr.io/kaniko-project/executor:debug
+    name: gcr.io/kaniko-project/executor:v1.23.2-debug
     entrypoint: [""]
   rules:
-  - if: $CI_COMMIT_TAG
+  - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
   script:
   - mkdir --parents /kaniko/.docker
   - |
@@ -18,17 +35,17 @@ kaniko:
       \"auths\": {
         \"${CI_REGISTRY}\": {
           \"username\": \"${CI_REGISTRY_USER}\",
-          \"password\":\"${CI_REGISTRY_PASSWORD}\"
+          \"password\": \"${CI_REGISTRY_PASSWORD}\"
         },
         \"${DOCKER_HUB_URL}\": {
           \"username\": \"${DOCKER_HUB_USERNAME}\",
-          \"password\":\"${DOCKER_HUB_PASSWORD}\"
+          \"password\": \"${DOCKER_HUB_PASSWORD}\"
         }
       }
     }" > /kaniko/.docker/config.json
-  - /kaniko/executor --build-arg="VERSION=${VERSION}" --context="${CI_PROJECT_DIR}" --destination="${CI_REGISTRY_IMAGE}:${VERSION}" --destination="${DOCKER_HUB_IMAGE}:${VERSION}" --dockerfile="${CI_PROJECT_DIR}/Dockerfile"
-  - echo "Successfully publised new image ${CI_REGISTRY_IMAGE}:${VERSION}"
-  - echo "Successfully publised new image ${DOCKER_HUB_IMAGE}:${VERSION}"
+  - /kaniko/executor --build-arg="WIREGUARD_VERSION=${WIREGUARD_VERSION}" --context="${CI_PROJECT_DIR}" --destination="${CI_REGISTRY_IMAGE}:${RSYNC_VERSION%-*}-alpine${ALPINE_VERSION}-${CI_PIPELINE_IID}" --destination="${DOCKER_HUB_IMAGE}:${RSYNC_VERSION%-*}-alpine${ALPINE_VERSION}-${CI_PIPELINE_IID}" --dockerfile="${CI_PROJECT_DIR}/Dockerfile"
+  - echo "Successfully published new image ${CI_REGISTRY_IMAGE}:${RSYNC_VERSION%-*}-alpine${ALPINE_VERSION}-${CI_PIPELINE_IID}"
+  - echo "Successfully published new image ${DOCKER_HUB_IMAGE}:${RSYNC_VERSION%-*}-alpine${ALPINE_VERSION}-${CI_PIPELINE_IID}"
   stage: build
   tags:
   - kubernetes
