ci: really fix image versioning

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ kaniko:
         }
       }
     }" > /kaniko/.docker/config.json
-  - /kaniko/executor --build-arg="WIREGUARD_VERSION=${WIREGUARD_VERSION}" --context="${CI_PROJECT_DIR}" --destination="${CI_REGISTRY_IMAGE}:${RSYNC_VERSION%-*}-alpine${ALPINE_VERSION}-${CI_PIPELINE_IID}" --destination="${DOCKER_HUB_IMAGE}:${RSYNC_VERSION%-*}-alpine${ALPINE_VERSION}-${CI_PIPELINE_IID}" --dockerfile="${CI_PROJECT_DIR}/Dockerfile"
+  - /kaniko/executor --build-arg="WIREGUARD_VERSION=${WIREGUARD_VERSION}" --context="${CI_PROJECT_DIR}" --destination="${CI_REGISTRY_IMAGE}:${WIREGUARD_VERSION%-*}-alpine${ALPINE_VERSION}-${CI_PIPELINE_IID}" --destination="${DOCKER_HUB_IMAGE}:${WIREGUARD_VERSION%-*}-alpine${ALPINE_VERSION}-${CI_PIPELINE_IID}" --dockerfile="${CI_PROJECT_DIR}/Dockerfile"
   - echo "Successfully published new image ${CI_REGISTRY_IMAGE}:${WIREGUARD_VERSION%-*}-alpine${ALPINE_VERSION}-${CI_PIPELINE_IID}"
   - echo "Successfully published new image ${DOCKER_HUB_IMAGE}:${WIREGUARD_VERSION%-*}-alpine${ALPINE_VERSION}-${CI_PIPELINE_IID}"
   stage: build
