--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,13 @@ variables:
   # renovate: datasource=repology depName=alpine_3_19/wireguard-tools versioning=loose
   WIREGUARD_VERSION: "1.0.20210914-r3"
 
+workflow:
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+    - if: $CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS
+      when: never
+    - if: $CI_COMMIT_BRANCH
+
 stages:
 - test
 - build
