--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,8 @@ kaniko-check:
   - if: $CI_COMMIT_REF_NAME != $CI_DEFAULT_BRANCH
   script:
   - /kaniko/executor --build-arg="WIREGUARD_VERSION=${WIREGUARD_VERSION}" --context="${CI_PROJECT_DIR}" --dockerfile="${CI_PROJECT_DIR}/Dockerfile" --no-push
-  - echo "Would publish new image ${CI_REGISTRY_IMAGE}:${WIREGUARD_VERSION%-*}.${CI_PIPELINE_IID}+alpine${ALPINE_VERSION}"
-  - echo "Would publish new image ${DOCKER_HUB_IMAGE}:${WIREGUARD_VERSION%-*}.${CI_PIPELINE_IID}+alpine${ALPINE_VERSION}"
+  - echo "Would publish new image ${CI_REGISTRY_IMAGE}:${WIREGUARD_VERSION%-*}.${CI_PIPELINE_IID}_alpine${ALPINE_VERSION}"
+  - echo "Would publish new image ${DOCKER_HUB_IMAGE}:${WIREGUARD_VERSION%-*}.${CI_PIPELINE_IID}_alpine${ALPINE_VERSION}"
   stage: test
   tags:
   - kubernetes
@@ -53,9 +53,9 @@ kaniko:
         }
       }
     }" > /kaniko/.docker/config.json
-  - /kaniko/executor --build-arg="WIREGUARD_VERSION=${WIREGUARD_VERSION}" --context="${CI_PROJECT_DIR}" --destination="${CI_REGISTRY_IMAGE}:${WIREGUARD_VERSION%-*}.${CI_PIPELINE_IID}+alpine${ALPINE_VERSION}" --destination="${DOCKER_HUB_IMAGE}:${WIREGUARD_VERSION%-*}.${CI_PIPELINE_IID}+alpine${ALPINE_VERSION}" --dockerfile="${CI_PROJECT_DIR}/Dockerfile"
-  - echo "Successfully published new image ${CI_REGISTRY_IMAGE}:${WIREGUARD_VERSION%-*}.${CI_PIPELINE_IID}+alpine${ALPINE_VERSION}"
-  - echo "Successfully published new image ${DOCKER_HUB_IMAGE}:${WIREGUARD_VERSION%-*}.${CI_PIPELINE_IID}+alpine${ALPINE_VERSION}"
+  - /kaniko/executor --build-arg="WIREGUARD_VERSION=${WIREGUARD_VERSION}" --context="${CI_PROJECT_DIR}" --destination="${CI_REGISTRY_IMAGE}:${WIREGUARD_VERSION%-*}.${CI_PIPELINE_IID}_alpine${ALPINE_VERSION}" --destination="${DOCKER_HUB_IMAGE}:${WIREGUARD_VERSION%-*}.${CI_PIPELINE_IID}_alpine${ALPINE_VERSION}" --dockerfile="${CI_PROJECT_DIR}/Dockerfile"
+  - echo "Successfully published new image ${CI_REGISTRY_IMAGE}:${WIREGUARD_VERSION%-*}.${CI_PIPELINE_IID}_alpine${ALPINE_VERSION}"
+  - echo "Successfully published new image ${DOCKER_HUB_IMAGE}:${WIREGUARD_VERSION%-*}.${CI_PIPELINE_IID}_alpine${ALPINE_VERSION}"
   stage: build
   tags:
   - kubernetes
